# another_shell

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  env.c  first_circle_of_parsing.c  interpreter.c  main.c  minishell  minishell.h  pregame_ritual.c  pwd.c  request_separation.c  test00  test01  test04  work_with_environments.c
includes/: minishell.h
srcs/: first_circle_of_parsing.c  main.c  pregame_ritual.c  request_separation.c  second_circle_of_parsing.c  signal_handling.c  work_with_environments.c
srcs/builtins/: cd.c  cd_utils.c  echo.c  env.c  env_export_utils.c  exit.c  export.c  pwd.c  unset.c  work_with_environments.c
srcs/important/: execution.c  execution_2.c  parsing_and_execution.c  pipe_execution.c  pregame_ritual.c  redirects.c  signal_handling.c
srcs/parsing/: filling_command_structure.c  first_circle_of_parsing.c  first_circle_of_parsing_and_memory_cleaning.c  memory_cleaning.c  request_separation.c  second_circle_of_parsing.c  validation.c
srcs/utils/: atoi.c  bzero.c  calloc.c  change_last_process_code.c  env_for_minishell.c  gnl.c  is_alpha.c  is_digit.c  is_shielded.c  is_special_symbol.c  is_valid_param_exp.c  iterators_to_zero.c  itoa.c  make_way_to_binary.c  pipeline_utils.c  putchar.c  putendl.c  putstr.c  realloc.c  request_validation_after_first_circle.c  skip_spaces.c  split.c  stop_buffering.c  str_to_lowercase.c  strcmp.c  strcpy.c  strdup.c  strjoin.c  strlcat.c  strlcpy.c  strlen.c  strncmp.c  substr.c  validation_after_filling.c
utils/: bzero.c  calloc.c  flags_shutting_up.c  gnl.c  is_shielded.c  is_special_symbol.c  split.c  strcmp.c  strcpy.c  strdup.c  strlcpy.c  strlen.c  substr.c
